refactor(appnav): improve appnav views with self field comments, final fields, and formatted strings
- Add explanatory comments for self field pattern in both views
- Make fields private and final for immutability
- Replace String.format() with String.formatted() for cleaner syntax
- Fix indentation in AppNavView method chaining